added photo to cocktails

--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -5,5 +5,28 @@
 
   <h1><%= @cocktail.name %></h1>
 
+  <br>
 
+  <table class="table table-hover">
+    <th>Ingredient</th>
+    <th>Amount</th>
+    <th>Desc</th>
+    <% @cocktail.doses.each do |dose| %>
+      <tr>
+        <td> <%= dose.ingredient.name %> </td>
+        <td> <%= dose.amount %> </td>
+        <td> <%= dose.description %> </td>
+        <td> <%= link_to "Edit", edit_cocktail_dose_path(@cocktail, dose) %> </td>
+        <td> Delete </td>
+      </tr>
+    <% end %>
+
+  </table>
+
+  <br>
+
+  <p><%= link_to "Add ingredient", new_cocktail_dose_path(@cocktail), class: "btn btn-primary" %>
+  <%= link_to "Delete cocktail", cocktail_path(@cocktail), method: :delete, class: "btn btn-danger" %></p>
+
+  <p> <%= link_to "Back to list of cocktails", cocktails_path, class: "btn btn-primary" %> </p>
 </div>
