Added gems and updated model for img upload support

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -10,4 +10,7 @@
   <br>
   <p><%= link_to "Add a new cocktail", new_cocktail_path, class: "btn btn-primary" %></p>
 
+
+    <%= cl_image_tag("qqqbkdzvum9luc601yt0",
+      width: 400, height: 300, crop: :fill) %>
 </div>
