--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -25,7 +25,7 @@
 
   <br>
 
-  <%= cl_image_tag @cocktail.photo, height: 300, width: 400, crop: :fill %>
+  <%= cl_image_tag("#{@cocktail.photo}", height: 300, width: 400, crop: :fill )%>
 
   <p><%= link_to "Add ingredient", new_cocktail_dose_path(@cocktail), class: "btn btn-primary" %>
   <%= link_to "Delete cocktail", cocktail_path(@cocktail), method: :delete, class: "btn btn-danger" %></p>
