--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
         <a class=contact-btn href="mailto: gustaf@folkmar.se"><i class="far fa-envelope"></i></a>
       </div>
       <div class="footer-copyright">
-        This footer is made with <i class="fas fa-heart"></i> at Le Wagon <em> by Gustaf Folkmar </em>
+        This site is built with <i class="fas fa-heart"></i> at Le Wagon <em> by Gustaf Folkmar </em>
       </div>
     </div>
 
