--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,9 +1,19 @@
 
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= cl_image_path(@cocktail.photo) %>">
+  <div class="container">
+    <h1><%= @cocktail.name %></h1>
+    <p>Smooth and fresh</p>
+    <!-- <a class="btn btn-primary" href="#">Apply now</a> -->
+
+
+  </div>
+</div>
+
+
+
+
 <div class="container mt-3">
 
-
-
-  <h1><%= @cocktail.name %></h1>
 
   <br>
 
@@ -25,10 +35,10 @@
 
   <br>
 
-  <%= cl_image_tag("#{@cocktail.photo}", height: 300, width: 400, crop: :fill )%>
+
 
   <p><%= link_to "Add ingredient", new_cocktail_dose_path(@cocktail), class: "btn btn-primary" %>
   <%= link_to "Delete cocktail", cocktail_path(@cocktail), method: :delete, class: "btn btn-danger" %></p>
 
-  <p> <%= link_to "Back to list of cocktails", cocktails_path, class: "btn btn-primary" %> </p>
+<!--   <p> <%= link_to "Back to list of cocktails", cocktails_path, class: "btn btn-primary" %> </p> -->
 </div>
