further styling and seeding more ingredients

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,9 +3,12 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100px;
+  height: 60px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 .footer-links {
   display: flex;
@@ -20,6 +23,7 @@
 }
 .footer-links a:hover {
   opacity: 1;
+  transition: 0.5s;
 }
 .footer .fa-heart {
   color: #D23333;
