--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -29,7 +29,7 @@
   </div>
 
   <br>
-  <p><%= link_to "Add a new cocktail", new_cocktail_path, class: "btn btn-primary" %></p>
+  <p><%= link_to "Add a new cocktail", new_cocktail_path, class: "btn btn-secondary" %></p>
 
 
 
