--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -37,8 +37,9 @@
 
 
 
-  <p><%= link_to "Add ingredient", new_cocktail_dose_path(@cocktail), class: "btn btn-primary" %>
-  <%= link_to "Delete cocktail", cocktail_path(@cocktail), method: :delete, class: "btn btn-danger" %></p>
+
+  <p><%= link_to "Add ingredient", new_cocktail_dose_path(@cocktail), class: "btn btn-secondary" %>
+  <%= link_to "Delete cocktail", cocktail_path(@cocktail), method: :delete, class: "btn btn-light" %></p>
 
 <!--   <p> <%= link_to "Back to list of cocktails", cocktails_path, class: "btn btn-primary" %> </p> -->
 </div>
