--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,8 +1,8 @@
 
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://img.huffingtonpost.com/asset/5a4bc8b31d000027005c1e57.jpeg?cache=MSUWDop9KO&ops=1910_1000);">
   <div class="container">
-    <h1>Fmar cocktails bring joy to all people</h1>
-    <p>Change your life and learn to drink cocktails by accessing one of our servers around the world.</p>
+    <h1>Cocktails bring joy to all people</h1>
+    <p>Change your life and learn to drink cocktails by accessing our site from servers around the world.</p>
     <!-- <a class="btn btn-primary" href="#">Apply now</a> -->
   </div>
 </div>
