--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,12 +51,11 @@
     <div class="footer">
       <div class="footer-links">
         <a href="https://github.com/gfmar"><i class="fab fa-github"></i></a>
-        <a href="https://www.facebook.com/g.folkmar"><i class="fab fa-facebook"></i></a>
         <a href="https://www.linkedin.com/in/gustaf-folkmar/"><i class="fab fa-linkedin"></i></a>
         <a class=contact-btn href="mailto: gustaf@folkmar.se"><i class="far fa-envelope"></i></a>
       </div>
       <div class="footer-copyright">
-        This site is built with <i class="fas fa-heart"></i> at Le Wagon <em> by Gustaf Folkmar </em>
+        Built with <i class="fas fa-heart"></i> at Le Wagon
       </div>
     </div>
 
